<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">선거구관리시스템</string>
    <string name="main_title">구역이동</string>
    <string name="sub_title1">주소</string>
    <string name="sub_title2">지도</string>
    <string name="sub_title3">현재위치</string>
    <string name="search">검색</string>
    <string name="group_prompt">그룹목록</string>
    <string name="class_prompt">권한목록</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="area_info">구역정보</string>
    <string name="jungchi_hwangyong">정치환경</string>
    <string name="social_hwangyong">사회환경</string>
    <string name="gigwan_info">기관정보</string>
    <string name="jooyo_saup">주요사업</string>
    <string name="board">게시판</string>
    <string name="setting_lock_input">암호를 입력해주세요.</string>
    <string name="setting_lock_input_info">암호를 입력해주세요.</string>
    <string name="setting_lock_forget_info">암호를 잊었을 경우, 앱을 삭제하고 다시 설치해 주세요.</string>
    <string name="right_menu">메뉴</string>
    <string name="popup_cancel">취 소</string>
    <string name="home">홈</string>
    <string name="population_household">인구 및 가구</string>
    <string name="str_org1">기관정보</string>
    <string name="str_org2">단체정보</string>

    <string-array name="img_ids">
        <item>@drawable/guyok</item>
        <item>@drawable/jungchi</item>
        <item>@drawable/social</item>
        <item>@drawable/gighan</item>
        <item>@drawable/saup</item>
        <item>@drawable/board</item>
    </string-array>
    <!--Woori research server.-->
    <string name="server_url">http://222.122.149.161:7070/ElectionManager_server/MobileReq.jsp</string>
    <!--wrjeoung home. -->
    <!--<string name="server_url">http://192.168.0.57:8080/ElectionManager_server/MobileReq.jsp</string>-->
    <!--for starbucks. -->
    <!--<string name="server_url">http://172.30.90.89:8080/ElectionManager_server/MobileReq.jsp</string>-->




    <string name="server_url_test">http://222.122.149.174:8080/ElectionManager_server/AddressServlet</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Woori research server.-->
    <string name="mapView_url">http://222.122.149.161:7070/ElectionManager_server/areaMap.jsp</string>
    <!--wrjeoung home. -->
    <!--<string name="mapView_url">http://192.168.0.57:8080/ElectionManager_server/areaMap.jsp</string>-->
    <!--for starbucks. -->
    <!--<string name="mapView_url">http://172.30.90.89:8080/ElectionManager_server/areaMap.jsp</string>-->

    <!-- 공통 -->
    <string name="btn_ok">확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_yes">예</string>
    <string name="btn_no">아니오</string>

    <!-- error -->
    <string name="error_no_camera">카메라가 없습니다</string>
    <string name="error_param">파라메타가 정확하지 않습니다</string>

    <!-- timeline -->
    <string name="input_edit_hint">내용을 입력하세요</string>
    <string name="input_title_message">메세지</string>
    <string name="input_title_memo">메모</string>

    <!-- 문자&메세지 보내기 -->
    <string name="input_msg_empty">내용을 입력해주세요</string>
    <string name="not_selected_tupyogu">투표구를 선택해주세요</string>
    <string name="remove_photo">선택한 사진을 삭제하시겠습니까?</string>

</resources>
